--- a/src/modules/HealthCheck/HealthCheck.csproj
+++ b/src/modules/HealthCheck/HealthCheck.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>    
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageVersion>3.1.0</PackageVersion> 
+    <PackageVersion>3.1.1</PackageVersion> 
     <PackageId>Ws.Core.Extensions.HealthCheck</PackageId>
     <AssemblyName>Ws.Core.Extensions.HealthCheck</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.HealthCheck</RootNamespace>
@@ -11,7 +11,7 @@
     <Description>Health check middleware UI</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes></PackageReleaseNotes>
-    <PackageTags>health check</PackageTags>
+    <PackageTags>health check</PackageTags> 
   </PropertyGroup>
   
   <PropertyGroup>
@@ -20,11 +20,12 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.Network" Version="3.0.1" />
-    <PackageReference Include="AspNetCore.HealthChecks.System" Version="3.0.3" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.0.9" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="3.0.2" />
-    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="3.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Network" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.System" Version="3.1.2" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="3.1.2" />
   </ItemGroup>  
 
   <ItemGroup>
