--- a/src/modules/Data.Cache.Memcached/Data.Cache.Memcached.csproj
+++ b/src/modules/Data.Cache.Memcached/Data.Cache.Memcached.csproj
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageVersion>3.1.2</PackageVersion>
+    <TargetFramework>net5.0</TargetFramework>
+    <PackageVersion>5.0.0-beta</PackageVersion>
     <PackageId>Ws.Core.Extensions.Data.Cache.Memcached</PackageId>
     <AssemblyName>Ws.Core.Extensions.Data.Cache.Memcached</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.Cache.Memcached</RootNamespace>
@@ -24,6 +24,6 @@
     <ProjectReference Include="..\Data.Cache\Data.Cache.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="EnyimMemcachedCore" Version="2.4.4" />
+    <PackageReference Include="EnyimMemcachedCore" Version="2.4.5" />
   </ItemGroup>
 </Project>
