--- a/src/modules/Data/Data.csproj
+++ b/src/modules/Data/Data.csproj
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>  
-		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<PackageVersion>3.1.1</PackageVersion> 
-		<PackageId>Ws.Core.Extensions.Data</PackageId>
+	<PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <PackageVersion>5.0.0-beta</PackageVersion>
+    <PackageId>Ws.Core.Extensions.Data</PackageId>
 		<AssemblyName>Ws.Core.Extensions.Data</AssemblyName>
 		<RootNamespace>Ws.Core.Extensions.Data</RootNamespace>
     <Authors>Massimo Di Paolo</Authors>
