--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>web</RootNamespace>
   </PropertyGroup>
   <PropertyGroup>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
+    <RunAnalyzersDuringBuild>true</RunAnalyzersDuringBuild>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="wwwroot\folder\**" />
@@ -14,10 +15,10 @@
     <None Remove="wwwroot\folder\**" />
   </ItemGroup>  
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="3.0.0" />
-    <PackageReference Include="Hangfire" Version="1.7.9" />
-    <PackageReference Include="NLog.Config" Version="4.6.8" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="5.0.0-preview1" />
+    <PackageReference Include="Hangfire" Version="1.7.18" />
+    <PackageReference Include="NLog.Config" Version="4.7.5" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\modules\Api\Api.csproj" />
