--- a/src/core.NLog/core.NLog.csproj
+++ b/src/core.NLog/core.NLog.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageVersion>0.0.3-beta</PackageVersion>
+    <TargetFramework>net5.0</TargetFramework>
+    <PackageVersion>0.0.4-beta</PackageVersion>
     <PackageId>Ws.Core.NLog</PackageId>
     <AssemblyName>Ws.Core.NLog</AssemblyName>
     <RootNamespace>Ws.Core</RootNamespace>
