--- a/src/modules/Cors/Cors.csproj
+++ b/src/modules/Cors/Cors.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<PackageVersion>3.1.1</PackageVersion>
-		<PackageId>Ws.Core.Extensions.Cors</PackageId>
+    <TargetFramework>net5.0</TargetFramework>
+    <PackageVersion>5.0.0-beta</PackageVersion>
+    <PackageId>Ws.Core.Extensions.Cors</PackageId>
 		<AssemblyName>Ws.Core.Extensions.Cors</AssemblyName>
 		<RootNamespace>Ws.Core.Extensions.Cors</RootNamespace>
     <Authors>Massimo Di Paolo</Authors>
