--- a/src/modules/Data.Cache.SqlServer/Data.Cache.SqlServer.csproj
+++ b/src/modules/Data.Cache.SqlServer/Data.Cache.SqlServer.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageVersion>3.1.2</PackageVersion>
+    <TargetFramework>net5.0</TargetFramework>
+    <PackageVersion>5.0.0-beta</PackageVersion>
     <PackageId>Ws.Core.Extensions.Data.Cache.SqlServer</PackageId>
     <AssemblyName>Ws.Core.Extensions.Data.Cache.SqlServer</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.Cache.SqlServer</RootNamespace>
@@ -21,8 +21,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="3.1.10" />
-    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="5.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="5.0.0-preview1" />
   </ItemGroup>
 
   <ItemGroup>
