--- a/src/modules/Data.FileSystem/Data.FileSystem.csproj
+++ b/src/modules/Data.FileSystem/Data.FileSystem.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageVersion>3.1.2</PackageVersion> 
+    <TargetFramework>net5.0</TargetFramework>
+    <PackageVersion>5.0.0-beta</PackageVersion>
     <PackageId>Ws.Core.Extensions.Data.FileSystem</PackageId>
     <AssemblyName>Ws.Core.Extensions.Data.FileSystem</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.FileSystem</RootNamespace>
