--- a/src/modules/Message/Message.csproj
+++ b/src/modules/Message/Message.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup> 
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageVersion>3.1.1</PackageVersion>     
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <PackageVersion>5.0.0-beta</PackageVersion>
     <PackageId>Ws.Core.Extensions.Message</PackageId>
     <AssemblyName>Ws.Core.Extensions.Message</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Message</RootNamespace>
@@ -20,8 +20,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MailKit" Version="2.9.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.Network" Version="3.1.3" />
+    <PackageReference Include="MailKit" Version="2.10.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Network" Version="5.0.0-preview1" />
   </ItemGroup>
 
   <ItemGroup>
