--- a/src/modules/Routing/Routing.csproj
+++ b/src/modules/Routing/Routing.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageVersion>3.1.1</PackageVersion>
+    <TargetFramework>net5.0</TargetFramework>
+    <PackageVersion>5.0.0-beta</PackageVersion>
     <PackageId>Ws.Core.Extensions.Routing</PackageId>
     <AssemblyName>Ws.Core.Extensions.Routing</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Routing</RootNamespace>
