--- a/.editorconfig
+++ b/.editorconfig
@@ -217,3 +217,6 @@ dotnet_naming_style.camel_case.required_prefix =
 dotnet_naming_style.camel_case.required_suffix = 
 dotnet_naming_style.camel_case.word_separator = 
 dotnet_naming_style.camel_case.capitalization = camel_case
+
+# MVC1004: Rename model bound parameter: AD0001 C# Analyzer threw an exception of type 'System.NullReferenceException' with message 'Object reference not set to an instance of an object.'.
+dotnet_diagnostic.MVC1004.severity = none
