--- a/src/modules/Data.Cache.Redis/Data.Cache.Redis.csproj
+++ b/src/modules/Data.Cache.Redis/Data.Cache.Redis.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageVersion>5.0.0-beta</PackageVersion>
+    <PackageVersion>5.0.0</PackageVersion>
     <PackageId>Ws.Core.Extensions.Data.Cache.Redis</PackageId>
     <AssemblyName>Ws.Core.Extensions.Data.Cache.Redis</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.Cache.Redis</RootNamespace>
@@ -11,7 +11,7 @@
     <Description>
     </Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>.netcore 3</PackageReleaseNotes>
+    <PackageReleaseNotes>.netcore 5</PackageReleaseNotes>
     <PackageTags></PackageTags>
   </PropertyGroup>
 
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="5.0.0-preview1" />
+    <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="5.0.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
   </ItemGroup>
 
