--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -15,10 +15,10 @@
     <None Remove="wwwroot\folder\**" />
   </ItemGroup>  
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="5.0.0-preview1" />
+    <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="5.0.1" />
     <PackageReference Include="Hangfire" Version="1.7.18" />
-    <PackageReference Include="NLog.Config" Version="4.7.5" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
+    <PackageReference Include="NLog.Config" Version="4.7.6" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.10.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\modules\Api\Api.csproj" />
