--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -2,7 +2,7 @@
   
     <PropertyGroup>    
     <TargetFramework>net5.0</TargetFramework>
-    <PackageVersion>5.0.0-beta</PackageVersion>  
+    <PackageVersion>5.0.0</PackageVersion>  
     <PackageId>Ws.Core</PackageId>    
     <AssemblyName>Ws.Core</AssemblyName>
     <RootNamespace>Ws.Core</RootNamespace>
@@ -31,7 +31,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <!--PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.0.0" /-->    
-    <PackageReference Include="ExtCore.WebApplication" Version="6.0.0-beta1" />
+    <PackageReference Include="ExtCore.WebApplication" Version="6.0.0" />
     <!--<ProjectReference Include="..\..\..\..\GitHub\ExtCore\src\ExtCore.WebApplication\ExtCore.WebApplication.csproj" />-->
   </ItemGroup>
   <ItemGroup>
