--- a/src/modules/Data.Cache.SqlServer/Data.Cache.SqlServer.csproj
+++ b/src/modules/Data.Cache.SqlServer/Data.Cache.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageVersion>5.0.0-beta</PackageVersion>
+    <PackageVersion>5.0.0</PackageVersion>
     <PackageId>Ws.Core.Extensions.Data.Cache.SqlServer</PackageId>
     <AssemblyName>Ws.Core.Extensions.Data.Cache.SqlServer</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.Cache.SqlServer</RootNamespace>
@@ -11,7 +11,7 @@
     <Description>
     </Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>.netcore 3</PackageReleaseNotes>
+    <PackageReleaseNotes>.netcore 5</PackageReleaseNotes>
     <PackageTags></PackageTags>
   </PropertyGroup>
 
@@ -21,8 +21,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="5.0.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="5.0.0-preview1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="5.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
