--- a/src/modules/Data.EF.MySql/Data.EF.MySql.csproj
+++ b/src/modules/Data.EF.MySql/Data.EF.MySql.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageVersion>5.0.0-beta2</PackageVersion>
+    <PackageVersion>5.0.0</PackageVersion>
     <PackageId>Ws.Core.Extensions.Data.EF.MySql</PackageId>
 		<AssemblyName>Ws.Core.Extensions.Data.EF.MySql</AssemblyName>
 		<RootNamespace>Ws.Core.Extensions.Data.EF.MySql</RootNamespace>
@@ -24,6 +24,6 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="AspNetCore.HealthChecks.MySql" Version="5.0.1" />
-	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
+	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
 	</ItemGroup>
 </Project>
