--- a/src/modules/Identity/Identity.csproj
+++ b/src/modules/Identity/Identity.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageVersion>0.0.3-alpha</PackageVersion>  
+    <PackageVersion>0.0.3-alpha1</PackageVersion>  
     <PackageId>Ws.Core.Extensions.Identity</PackageId>
     <AssemblyName>Ws.Core.Extensions.Identity</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Identity</RootNamespace>
@@ -20,7 +20,7 @@
   </PropertyGroup>  
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="4.1.1" />
+    <PackageReference Include="IdentityServer4" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
