F-HealthCheck-app-data-logger

--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -60,7 +60,7 @@
           }
         }
       },
-      "Ws.Core.Extensions.Data.Mongo": {
+      "_Ws.Core.Extensions.Data.Mongo": {
         "priority": 398,
         "options": {
           "connections": [
@@ -84,12 +84,21 @@
                   "jsonConvert": true
                 }
               ]
+            },
+            {
+              "name": "Log",
+              "properties": [
+                {
+                  "name": "Level",
+                  "hasConversion": "string"
+                }
+              ]
             }
           ]
         }
       },
       "Ws.Core.Extensions.Data.EF.MySql": {
-        "priority": 400,
+        "priority": 402,
         "options": {
           "connections": [
             {
@@ -104,7 +113,7 @@
           "connections": [
             {
               "name": "default",
-              "connectionString": "Server=.,14331;Database=Ws-Core;User Id=Ws-Core-Usr;Password=5876ee62-d2a9-4e61-8c3a-88d41f4543e8;MultipleActiveResultSets=true"
+              "connectionString": "Server=.,14331;Database=app-core;User Id=app-core-usr;Password=5876ee62-d2a9-4e61-8c3a-88d41f4543e8;MultipleActiveResultSets=true"
             }
           ]
         }
@@ -205,7 +214,7 @@
               "path": "/healthz/checks",
               "contentType": "json",
               "skipChecks": false,
-              "authHosts": [ "localhost:32040" ]
+              "_authHosts": [ "localhost:32040" ]
             }
           ],
           "checks": {
@@ -214,54 +223,140 @@
                 "driver": "C:\\",
                 "minimumFreeMb": 2048,
                 "status": "Degraded",
-                "name": "diskC"
+                "name": "diskC",
+                "tags": [ "infrastructure", "on-premises" ]
               }
             ],
             "memory": {
               "maximumAllocatedMb": 500,
-              "status": "Degraded"
+              "status": "Degraded",
+              "tags": [ "infrastructure", "on-premises" ]
             },
             "process": [
               {
-                "processName": "iisexpress",
-                "name": "iisexpress",
-                "status": "Degraded"
+                "processName": "devenv",
+                "name": "devenv",
+                "status": "Degraded",
+                "tags": [ "infrastructure", "on-premises" ]
               }
             ],
             "tcp": [
               {
                 "host": "127.0.0.1",
-                "port": 1025,
-                "name": "mailcatcher"
+                "port": 25,
+                "name": "mailcatcher",
+                "tags": [ "infrastructure", "local", "smtp" ]
               },
               {
                 "host": "127.0.0.1",
                 "port": 14331,
-                "name": "mssql-01"
+                "name": "mssql-01",
+                "tags": [ "infrastructure", "local", "db" ]
               }
             ],
-            "_http": [
+            "http": [
               {
                 "url": "https://www.google.com",
                 "name": "outbound",
-                "status": "Unhealthy"
+                "status": "Unhealthy",
+                "tags": [ "network", "firewall" ]
               }
-            ]
+            ],
+            "appLog": {
+              "name": "app-log",
+              "takeLastLog": {
+                "criteria": "top",
+                "value": 10000
+              },
+              "_logIgnoreRoles": [
+                {
+                  "level": "Warn",
+                  "_selectors": [
+                    { "_logger": { "list": [ "PUCBM.Hub.Controllers.PrenotingController" ] } },
+                    {
+                      "_logger": {
+                        "list": [ "Eurospin", "PUCBM" ],
+                        "role": "startWith"
+                      }
+                    }
+                  ]
+                },
+                {
+                  "level": "Error",
+                  "selectors": [
+                    {
+                      "logger": {
+                        "list": [ "Aves.Booking.RatePlan", "Eurospin.Server.Extensions.ImageSharpExtension", "SixLabors.ImageSharp.Web.Middleware.ImageSharpMidd" ],
+                        "role": "equalTo"
+                      }
+                    },
+                    {
+                      "logger": {
+                        "list": [ "NodeServices" ],
+                        "role": "contains"
+                      }
+                    }
+                  ]
+                }
+              ],
+              "healthStatusCheckers": [
+                {
+                  "level": "Warn",
+                  "minCounters": [
+                    {
+                      "minEntry": 1000,
+                      "healthStatus": "Degraded"
+                    },
+                    {
+                      "minEntry": 10000,
+                      "healthStatus": "Unhealthy"
+                    }
+                  ]
+                },
+                {
+                  "level": "Error",
+                  "minCounters": [
+                    {
+                      "minEntry": 100,
+                      "healthStatus": "Degraded"
+                    },
+                    {
+                      "minEntry": 1000,
+                      "healthStatus": "Unhealthy"
+                    }
+                  ]
+                },
+                {
+                  "level": "Fatal",
+                  "minCounters": [
+                    {
+                      "minEntry": 10,
+                      "healthStatus": "Unhealthy"
+                    }
+                  ]
+                }
+              ],
+              "logMessageAggregate": {
+                "truncateLengthAt": 255,
+                "maxLevenshteinDistanceFactor": 90
+              },
+              "tags": [ "app" ]
+            }
           },
           "ui": {
             "enabled": true,
-            "dbPath": "Files\\healthchecksdb",
-            "injectCss": "wwwroot/healthcheck-ui/style.css",
+            "_dbPath": "Files\\healthchecksdb",
+            "_injectCss": "wwwroot/healthcheck-ui/style.css",
             "endpoints": [
               {
-                "uri": "http://localhost:32040/healthz/checks",
+                "uri": "/healthz/checks",
                 "name": "web-app"
               }
             ],
             "webhooks": [
               {
                 "name": "web",
-                "uri": "http://localhost:32040/hook",
+                "uri": "/hook",
                 "payload": "{\"title\": \"The HealthCheck '[[LIVENESS]]' is failing\",\"text\": \"Error message: [[FAILURE]]\r\n[[DESCRIPTIONS]]\",\"isFailure\": true}",
                 "restorePayload": "{\"title\": \"The HealthCheck '[[LIVENESS]]' is recovered\",\"text\": \"All is up and running\"}"
               }
