--- a/src/modules/HealthCheck/HealthCheck.csproj
+++ b/src/modules/HealthCheck/HealthCheck.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageVersion>5.0.1</PackageVersion>
+    <PackageVersion>5.1.0</PackageVersion>
     <PackageId>Ws.Core.Extensions.HealthCheck</PackageId>
     <AssemblyName>Ws.Core.Extensions.HealthCheck</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.HealthCheck</RootNamespace>
@@ -26,6 +26,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="5.0.1" />
     <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="5.0.1" />
+    <PackageReference Include="Fastenshtein" Version="1.0.0.8" />
   </ItemGroup>  
 
   <ItemGroup>
