--- a/tests/xCore/xCore.csproj
+++ b/tests/xCore/xCore.csproj
@@ -15,12 +15,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.6" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.13" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.utility" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
-    <PackageReference Include="coverlet.collector" Version="3.0.3">
+    <PackageReference Include="coverlet.collector" Version="3.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -29,9 +31,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\core\core.csproj" />
     <ProjectReference Include="..\..\src\modules\Api\Api.csproj" />
+    <ProjectReference Include="..\..\src\modules\Data.EF.SqlServer\Data.EF.SqlServer.csproj" />
+    <ProjectReference Include="..\..\src\modules\HealthCheck\HealthCheck.csproj" />
+    <ProjectReference Include="..\..\src\modules\Message\Message.csproj" />
     <ProjectReference Include="..\..\src\modules\Routing\Routing.csproj" />
   </ItemGroup>
-
-
-
+	
 </Project>
