--- a/src/modules/Data.FileSystem/Data.FileSystem.csproj
+++ b/src/modules/Data.FileSystem/Data.FileSystem.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageVersion>5.0.1</PackageVersion>
+    <PackageVersion>5.0.2</PackageVersion>
     <PackageId>Ws.Core.Extensions.Data.FileSystem</PackageId>
     <AssemblyName>Ws.Core.Extensions.Data.FileSystem</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.FileSystem</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>.netcore 3</PackageReleaseNotes>
+    <PackageReleaseNotes>.net5</PackageReleaseNotes>
     <PackageTags></PackageTags>
   </PropertyGroup> 
 
