F-net6-include-extCore: modules Execute signature with builder/app; minimal hosting model; minimal api & legacy controllers; include extCore fork; Carter api discover/ext;

--- a/.gitignore
+++ b/.gitignore
@@ -202,9 +202,12 @@ _Pvt_Extensions
 /samples/**/Extensions/
 # Test
 /tests/**/*.xml
+/tests/**/wwwroot
+/tests/**/Extensions/**
 /tests/**/Files/*.*
 # Task Secret
 .env
 # Pack
 /.build
 *.db
+
