--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -30,9 +30,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-    <!--PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.0.0" /-->    
-    <PackageReference Include="ExtCore.WebApplication" Version="7.0.0" />
-    <!--<ProjectReference Include="..\..\..\..\GitHub\ExtCore\src\ExtCore.WebApplication\ExtCore.WebApplication.csproj" />-->
+	  <!--PackageReference Include="ExtCore.WebApplication" Version="7.0.0" /-->
   </ItemGroup>
   <ItemGroup>
     <Content Update="wwwroot/**/*.*" Pack="false" />
@@ -43,6 +41,7 @@
     </Folder>
   </ItemGroup>
   <ItemGroup>    
+    <ProjectReference Include="..\extCore\WebApplication\ExtCore.Application.csproj" />    
     <ProjectReference Include="..\modules\ExtensionBase\ExtensionBase.csproj" />
   </ItemGroup>   
 </Project> 
