--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -30,7 +30,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-	  <!--PackageReference Include="ExtCore.WebApplication" Version="7.0.0" /-->
+    <PackageReference Include="Scrutor" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="wwwroot/**/*.*" Pack="false" />
