--- a/tests/xCore/xCore.csproj
+++ b/tests/xCore/xCore.csproj
@@ -5,6 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>xCore</RootNamespace>
 		<IsPackable>false</IsPackable>
+		<EnableNETAnalyzers>true</EnableNETAnalyzers>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -55,6 +56,7 @@
 		<ProjectReference Include="..\..\src\modules\Data.EF.SQLite\Data.EF.SQLite.csproj" />
 		<ProjectReference Include="..\..\src\modules\Data.EF.SqlServer\Data.EF.SqlServer.csproj" />
 		<ProjectReference Include="..\..\src\modules\Data\Data.csproj" />
+		<ProjectReference Include="..\..\src\modules\Diagnostic\Diagnostic.csproj" />
 		<ProjectReference Include="..\..\src\modules\HealthCheck\HealthCheck.csproj" />
 		<ProjectReference Include="..\..\src\modules\Message\Message.csproj" />
 		<ProjectReference Include="..\..\src\modules\StaticFiles\StaticFiles.csproj" />
